Adding new files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" />
+    <script src="class.js"></script>
     <title>Solar System</title>
 </head>
 <body>
-    <canvas id="canvas" width="300" height="300"></canvas>
+    <canvas id="canvas"></canvas>
+    <canvas id="chart" width="600" height="600"></canvas>
+    <script src="solarSystemObjects.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
