Move js to folder

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="style.css" rel="stylesheet" />
-    <script src="class.js"></script>
+    <script src="js/class.js"></script>
     <title>Solar System</title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
     <canvas id="chart" width="600" height="600"></canvas>
-    <script src="solarSystemObjects.js"></script>
-    <script src="main.js"></script>
+    <script src="js/solarSystemObjects.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
