--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="style.css" rel="stylesheet" />
+    <script src="js/utils.js"></script>
     <script src="js/class.js"></script>
     <title>Solar System</title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <canvas id="chart" width="600" height="600"></canvas>
     <script src="js/solarSystemObjects.js"></script>
     <script src="js/main.js"></script>
 </body>
