--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="style.css" rel="stylesheet" />
-    <script src="js/utils.js"></script>
+    <script src="js/prototype.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/controls.js"></script>
+    <script src="js/seasons.js"></script>
     <script src="js/planet.js"></script>
     <title>Solar System</title>
 </head>
