Removed unused moon.js, added some comments

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="style.css" rel="stylesheet" />
     <script src="js/prototype.js"></script>
-    <script src="js/custom.js"></script>
     <script src="js/controls.js"></script>
     <script src="js/planet.js"></script>
-    <title>Solar System</title>
+    <script src="js/solarSystemObjects.js"></script>
+    <title>Solar System Animation</title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="js/solarSystemObjects.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
